--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "production": {
@@ -95,10 +97,13 @@
               "src/assets"
             ],
             "styles": [
+              "nodemodules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "nodemodules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           }
         }
       }
