--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
+    "ngx-mask": "^12.0.0",
     "poppers.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
