--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "ngx-mask": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
