--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": { "proxyConfig": "proxy.conf.json" },
           "configurations": {
             "production": {
               "browserTarget": "PIL-Money:build:production"
